Configure and update server location (#9)
Reviewed-on: http://devops-server/tychosoft/apollo/pulls/9

--- a/web/views/edit-line.html
+++ b/web/views/edit-line.html
@@ -106,6 +106,7 @@
         <td align="left"></td>
         <td align="right" class="button-cell"><button class="danger" type="submit">Delete</button></td>
     </tr></table>
+</form>
 </section>
 
 </body>
