--- a/web/views/edit-line.html
+++ b/web/views/edit-line.html
@@ -94,7 +94,7 @@
 <hr>
 <h2>Danger</h2>
 <form id="delete" method="POST" action="/lines/{{ .Id }}/delete">
-    <p class="intro">Deactivate and remove this extension from your system.
+    <p class="intro">Deactivate and remove this line from your system.
     You must manually enter the line number you wish to delete to confirm this
     operation</p>
 
