--- a/web/views/lines.html
+++ b/web/views/lines.html
@@ -17,9 +17,9 @@
 <table width="100%">
     <thead>
         <tr>
-            <th>Extension</th>
+            <th>Line</th>
             <th>Display Name</th>
-            <th>Lines</th>
+            <th>Limit</th>
             <th>Type</th>
             <th>Agent</th>
             <th>Location</th>
